--- a/rpc/examples/echo/server/templates/index.html
+++ b/rpc/examples/echo/server/templates/index.html
@@ -7,6 +7,7 @@
     <script>
       window.creds = {{ .Credentials }}
       window.externalAuthAddr = {{ .ExternalAuthAddr }}
+      window.externalAuthToEntity = {{ .ExternalAuthToEntity }}
     </script>
     <script src="./static/main.js"></script>
   </head>
