rpc: Support TLS entity authentication
- Also add mDNS host lookup in dial

--- a/rpc/examples/fileupload/server/templates/index.html
+++ b/rpc/examples/fileupload/server/templates/index.html
@@ -5,6 +5,7 @@
     <title>File Upload Example</title>
     <link rel="icon" type="image/png" href="data:image/png;base64,iVBORw0KGgo=">
     <script>
+      window.webrtcHost = {{ .WebRTCHost }}
       window.creds = {{ .Credentials }}
       window.externalAuthAddr = {{ .ExternalAuthAddr }}
       window.externalAuthToEntity = {{ .ExternalAuthToEntity }}
