update root js reference

--- a/rpc/examples/echo/server/templates/index.html
+++ b/rpc/examples/echo/server/templates/index.html
@@ -11,7 +11,7 @@
       window.externalAuthToEntity = {{ .ExternalAuthToEntity }}
       window.accessToken = {{ .AccessToken }}
     </script>
-    <script src="./static/main.js"></script>
+    <script src="./static/main.mjs"></script>
   <style>
     table {
       border-collapse: collapse;
