--- a/rpc/examples/echo/server/templates/index.html
+++ b/rpc/examples/echo/server/templates/index.html
@@ -11,7 +11,6 @@
       window.externalAuthToEntity = {{ .ExternalAuthToEntity }}
       window.accessToken = {{ .AccessToken }}
     </script>
-    <script src="./static/main.mjs"></script>
   <style>
     table {
       border-collapse: collapse;
@@ -21,6 +20,7 @@
       padding: 0.5rem;
     }
   </style>
+    <script src="./static/main.js"></script>
   </head>
   <body>
     <table>
