--- a/rpc/examples/echo/server/templates/index.html
+++ b/rpc/examples/echo/server/templates/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>Echo Example</title>
-    <link rel="icon" type="image/png" href="data:image/png;base64,iVBORw0KGgo=">
+    <link
+      rel="icon"
+      type="image/png"
+      href="data:image/png;base64,iVBORw0KGgo="
+    />
     <script>
       window.webrtcHost = {{ .WebRTCHost }}
       window.creds = {{ .Credentials }}
@@ -11,15 +15,16 @@
       window.externalAuthToEntity = {{ .ExternalAuthToEntity }}
       window.accessToken = {{ .AccessToken }}
     </script>
-  <style>
-    table {
-      border-collapse: collapse;
-    }
-    td, th {
-      border: 1px solid #999;
-      padding: 0.5rem;
-    }
-  </style>
+    <style>
+      table {
+        border-collapse: collapse;
+      }
+      td,
+      th {
+        border: 1px solid #999;
+        padding: 0.5rem;
+      }
+    </style>
     <script src="./static/main.js"></script>
   </head>
   <body>
